--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bleach==1.4.2
 boto==2.38.0
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -7,6 +8,8 @@ django-cities-light==3.1.2
 django-storages==1.1.8
 django-toolbelt==0.0.1
 gunicorn==19.3.0
+html5lib==0.9999999
+newrelic==2.52.0.40
 oauthlib==0.7.2
 psycopg2==2.6
 PyJWT==1.1.0
@@ -17,4 +20,3 @@ requests-oauthlib==0.5.0
 six==1.9.0
 static3==0.6.0
 Unidecode==0.4.17
-newrelic
